services/image-resize/kubernetes/image-resize.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-resize-stateful
  labels:
    app: image-resize
spec:
  serviceName: image-resize
  replicas: 1
  selector:
    matchLabels:
      app: image-resize
  template:
    metadata:
      labels:
        app: image-resize
    spec:
      containers:
      - name: image-resize
        image: ghcr.io/csia-pme/csia-pme-image-resize:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
