services/image-resize/kubernetes/image-resize.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-resize-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 9292
      targetPort: 80
      protocol: TCP
  selector:
    app: image-resize
